Testo più grande e su una riga per la frase ispirazionale

--- a/index.html
+++ b/index.html
@@ -77,10 +77,11 @@
       padding: 40px;
       display: flex;
       flex-direction: column;
-      justify-content: flex-end;
+      justify-content: flex-start; /* Sposta il blocco più in alto */
       align-items: flex-end;
       text-align: right;
       color: white;
+      margin-top: 80px; /* Aggiunto margine superiore */
     }
 
     .hero-text h1 {
@@ -133,7 +134,8 @@
       .hero-text {
         align-items: center;
         text-align: center;
-        justify-content: center;
+        justify-content: flex-start;
+        margin-top: 40px;
       }
 
       .hero-text h1 {
