Sposto leggermente più in alto il blocco della scritta hero

--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
       padding: 40px;
       display: flex;
       flex-direction: column;
-      justify-content: flex-start; /* Sposta il blocco più in alto */
+      justify-content: flex-start;
       align-items: flex-end;
       text-align: right;
       color: white;
-      margin-top: 80px; /* Aggiunto margine superiore */
+      margin-top: 40px; /* Modificato da 80px a 40px */
     }
 
     .hero-text h1 {
