Hero text leggermente più in alto ma ancora in basso

--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
       padding: 40px;
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
+      justify-content: flex-end; /* torna in basso */
       align-items: flex-end;
       text-align: right;
       color: white;
-      margin-top: 40px; /* Modificato da 80px a 40px */
+      margin-top: 40px; /* leggermente più alto rispetto a prima */
     }
 
     .hero-text h1 {
@@ -134,8 +134,8 @@
       .hero-text {
         align-items: center;
         text-align: center;
-        justify-content: flex-start;
-        margin-top: 40px;
+        justify-content: flex-end;
+        margin-top: 20px;
       }
 
       .hero-text h1 {
@@ -192,6 +192,3 @@
       <h1>PER TE IL MIGLIOR <span>DESIGN</span><br />DEL TATUAGGIO</h1>
       <p>LE TUE IDEE MERITANO ISPIRAZIONE, TECNICA E CUORE.</p>
     </div>
-  </section>
-</body>
-</html>
