Hero text ancora più in basso nella sezione hero

--- a/index.html
+++ b/index.html
@@ -77,16 +77,18 @@
       padding: 40px;
       display: flex;
       flex-direction: column;
-      justify-content: flex-end; /* torna in basso */
+      justify-content: flex-end; /* In basso */
       align-items: flex-end;
       text-align: right;
       color: white;
-      margin-top: 40px; /* leggermente più alto rispetto a prima */
+      margin-bottom: 40px; /* Sposta ancora più in basso */
+      margin-top: 0;
     }
 
     .hero-text h1 {
       font-size: 64px;
       font-weight: bold;
+      margin-bottom: 10px;
     }
 
     .hero-text span {
@@ -94,7 +96,7 @@
     }
 
     .hero-text p {
-      margin-top: 30px;
+      margin-top: 10px;
       font-size: 36px;
       max-width: none;
       white-space: nowrap;
@@ -135,7 +137,7 @@
         align-items: center;
         text-align: center;
         justify-content: flex-end;
-        margin-top: 20px;
+        margin-bottom: 20px;
       }
 
       .hero-text h1 {
@@ -189,6 +191,11 @@
 
   <section class="hero" id="home">
     <div class="hero-text">
-      <h1>PER TE IL MIGLIOR <span>DESIGN</span><br />DEL TATUAGGIO</h1>
+      <h1>
+        PER TE IL MIGLIOR <span>DESIGN</span><br />DEL TATUAGGIO
+      </h1>
       <p>LE TUE IDEE MERITANO ISPIRAZIONE, TECNICA E CUORE.</p>
     </div>
+  </section>
+</body>
+</html>
