--- a/index.html
+++ b/index.html
@@ -104,21 +104,20 @@
 
     .social {
       position: absolute;
-      left: 0;
-      top: 60%;
+      left: 40px; /* Più distante dal bordo sinistro */
+      top: 65%;
       transform: translateY(-50%);
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 60px; /* Maggiore distanza tra i loghi */
+      gap: 80px; /* Maggiore distanza tra i loghi */
       z-index: 999;
       width: 120px;
-      /* Centra i loghi rispetto al lato sinistro */
       justify-content: center;
     }
 
     .social img {
-      width: 104px; /* Raddoppiato rispetto a 52px */
+      width: 72px; /* Più piccolo rispetto a prima */
       height: auto;
       transition: filter 0.3s ease;
       filter: brightness(0.8);
@@ -157,13 +156,13 @@
 
       .social {
         top: 70%;
-        left: 0;
-        gap: 30px;
+        left: 10px;
+        gap: 40px;
         width: 80px;
       }
 
       .social img {
-        width: 64px;
+        width: 48px;
       }
 
       .logo {
