--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
     }
 
     .logo {
-      height: 160px; /* Logo più grande */
-      transition: height 0.3s;
+      height: 100px;
     }
 
     nav a {
@@ -105,20 +104,21 @@
 
     .social {
       position: absolute;
-      left: 40px;
-      top: 65%;
+      left: 0;
+      top: 60%;
       transform: translateY(-50%);
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 80px;
+      gap: 60px; /* Maggiore distanza tra i loghi */
       z-index: 999;
       width: 120px;
+      /* Centra i loghi rispetto al lato sinistro */
       justify-content: center;
     }
 
     .social img {
-      width: 72px;
+      width: 104px; /* Raddoppiato rispetto a 52px */
       height: auto;
       transition: filter 0.3s ease;
       filter: brightness(0.8);
@@ -139,10 +139,6 @@
         margin-top: 10px;
       }
 
-      .logo {
-        height: 100px; /* Logo più grande anche su mobile */
-      }
-
       .hero-text {
         align-items: center;
         text-align: center;
@@ -161,13 +157,17 @@
 
       .social {
         top: 70%;
-        left: 10px;
-        gap: 40px;
+        left: 0;
+        gap: 30px;
         width: 80px;
       }
 
       .social img {
-        width: 48px;
+        width: 64px;
+      }
+
+      .logo {
+        height: 80px;
       }
     }
   </style>
