Sposta ulteriormente a destra i loghi social

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     .social {
       position: absolute;
-      left: 100px; /* Spostati più a destra rispetto a 40px */
+      left: 180px; /* Ancora più a destra */
       top: 65%;
       transform: translateY(-50%);
       display: flex;
