Allinea i loghi social distanziandoli dal bordo sinistro quanto la loro dimensione

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     .social {
       position: absolute;
-      left: 180px; /* Ancora più a destra */
+      left: 72px; /* Distanza dal bordo uguale alla larghezza dei loghi */
       top: 65%;
       transform: translateY(-50%);
       display: flex;
