Fix posizione loghi social desktop e mobile

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
       .hero-text {
         align-items: center;
         text-align: center;
-        justify-content: flex-end;
+        justify-content: flex-start;
         margin-bottom: 20px;
         margin-top: 40px;
         position: relative;
