Aggiunte e aggiornate pagine Tattoo, Chi sono, Contatti, Blog con struttura coerente

--- a/index.html
+++ b/index.html
@@ -259,11 +259,11 @@
     <img src="img/luketa2-logo.png" alt="LukeTA2 Logo" class="logo" />
     <button class="hamburger" onclick="document.querySelector('nav').classList.toggle('active')">&#9776;</button>
     <nav>
-      <a href="#home">HOME</a>
-      <a href="#tattoo">TATTOO</a>
-      <a href="#chisono">CHI SONO</a>
-      <a href="#contatti">CONTATTI</a>
-      <a href="#blog">BLOG</a>
+      <a href="index.html">HOME</a>
+      <a href="tattoo.html">TATTOO</a>
+      <a href="chisono.html">CHI SONO</a>
+      <a href="contatti.html">CONTATTI</a>
+      <a href="blog.html">BLOG</a>
     </nav>
   </header>
 
