--- a/contatti.html
+++ b/contatti.html
@@ -7,7 +7,40 @@
   <link rel="stylesheet" href="style.css" />
   <style>
     body { background: #111; color: #fff; }
-    .contatti-container { max-width: 500px; margin: 80px auto 0 auto; padding: 32px; background: rgba(0,0,0,0.7); border-radius: 18px; box-shadow: 0 4px 24px #000a; }
+    .section-hero {
+      height: 60vh;
+      background: url('img/mandala.jpg') center/cover no-repeat;
+      position: relative;
+      display: flex;
+      align-items: flex-end;
+      justify-content: center;
+    }
+    .section-header {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100px;
+      background: rgba(0,0,0,0.7);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 2;
+    }
+    .section-header .logo {
+      position: absolute;
+      left: 40px;
+      height: 80px;
+    }
+    .section-title {
+      color: #fff;
+      font-size: 2.5rem;
+      letter-spacing: 2px;
+      text-align: center;
+      width: 100%;
+      font-family: 'LemonMilk', sans-serif;
+    }
+    .contatti-container { max-width: 500px; margin: 40px auto 0 auto; padding: 32px; background: rgba(0,0,0,0.7); border-radius: 18px; box-shadow: 0 4px 24px #000a; }
     .contatti-title { text-align: center; font-size: 2.5rem; color: #d29952; margin-bottom: 24px; letter-spacing: 2px; }
     .contatti-info { color: #ccc; font-size: 1.2rem; text-align: center; margin-bottom: 24px; }
     .contatti-form { display: flex; flex-direction: column; gap: 16px; }
@@ -18,27 +51,11 @@
   </style>
 </head>
 <body>
-  <!-- Header e menu -->
-  <header>
-    <img src="img/luketa2-logo.png" alt="LukeTA2 Logo" class="logo" />
-    <button class="hamburger" onclick="document.querySelector('nav').classList.toggle('active')">&#9776;</button>
-    <nav>
-      <a href="index.html">HOME</a>
-      <a href="tattoo.html">TATTOO</a>
-      <a href="chisono.html">CHI SONO</a>
-      <a href="contatti.html">CONTATTI</a>
-      <a href="blog.html">BLOG</a>
-    </nav>
-  </header>
-  <div class="social-desktop">
-    <a href="https://www.facebook.com/luketa2/" target="_blank"><img src="img/facebook.png" alt="Facebook" /></a>
-    <a href="https://www.instagram.com/luketa2" target="_blank"><img src="img/instagram.png" alt="Instagram" /></a>
-    <a href="https://wa.me/393482463458" target="_blank"><img src="img/whatsapp.png" alt="WhatsApp" /></a>
-  </div>
-  <div class="social-mobile" style="display:none;">
-    <a href="https://www.facebook.com/luketa2/" target="_blank"><img src="img/facebook.png" alt="Facebook" /></a>
-    <a href="https://www.instagram.com/luketa2" target="_blank"><img src="img/instagram.png" alt="Instagram" /></a>
-    <a href="https://wa.me/393482463458" target="_blank"><img src="img/whatsapp.png" alt="WhatsApp" /></a>
+  <div class="section-hero">
+    <div class="section-header">
+      <img src="img/luketa2-logo.png" alt="LukeTA2 Logo" class="logo" />
+      <span class="section-title">Contatti</span>
+    </div>
   </div>
   <main>
     <div class="contatti-container">
