--- a/tattoo.html
+++ b/tattoo.html
@@ -7,7 +7,43 @@
   <link rel="stylesheet" href="style.css" />
   <style>
     body { background: #111; color: #fff; }
-    .tattoo-section { max-width: 1100px; margin: 60px auto 0 auto; padding: 32px; background: rgba(0,0,0,0.7); border-radius: 18px; box-shadow: 0 4px 24px #000a; margin-bottom: 40px; }
+    .section-hero {
+      height: 60vh;
+      background: url('img/watercolor.jpg') center/cover no-repeat;
+      position: relative;
+      display: flex;
+      align-items: flex-end;
+      justify-content: center;
+    }
+    .section-hero.bw {
+      background-image: url('img/biancoenero.jpg');
+    }
+    .section-header {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100px;
+      background: rgba(0,0,0,0.7);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 2;
+    }
+    .section-header .logo {
+      position: absolute;
+      left: 40px;
+      height: 80px;
+    }
+    .section-title {
+      color: #fff;
+      font-size: 2.5rem;
+      letter-spacing: 2px;
+      text-align: center;
+      width: 100%;
+      font-family: 'LemonMilk', sans-serif;
+    }
+    .tattoo-section { max-width: 1100px; margin: 40px auto 0 auto; padding: 32px; background: rgba(0,0,0,0.7); border-radius: 18px; box-shadow: 0 4px 24px #000a; margin-bottom: 40px; }
     .tattoo-title { text-align: center; font-size: 2.2rem; margin-bottom: 24px; letter-spacing: 2px; color: #d29952; }
     .tattoo-gallery { display: flex; flex-wrap: wrap; justify-content: center; gap: 32px; }
     .tattoo-gallery img { width: 320px; max-width: 90vw; border-radius: 16px; box-shadow: 0 4px 24px #000a; }
@@ -15,27 +51,11 @@
   </style>
 </head>
 <body>
-  <!-- Header e menu -->
-  <header>
-    <img src="img/luketa2-logo.png" alt="LukeTA2 Logo" class="logo" />
-    <button class="hamburger" onclick="document.querySelector('nav').classList.toggle('active')">&#9776;</button>
-    <nav>
-      <a href="index.html">HOME</a>
-      <a href="tattoo.html">TATTOO</a>
-      <a href="chisono.html">CHI SONO</a>
-      <a href="contatti.html">CONTATTI</a>
-      <a href="blog.html">BLOG</a>
-    </nav>
-  </header>
-  <div class="social-desktop">
-    <a href="https://www.facebook.com/luketa2/" target="_blank"><img src="img/facebook.png" alt="Facebook" /></a>
-    <a href="https://www.instagram.com/luketa2" target="_blank"><img src="img/instagram.png" alt="Instagram" /></a>
-    <a href="https://wa.me/393482463458" target="_blank"><img src="img/whatsapp.png" alt="WhatsApp" /></a>
-  </div>
-  <div class="social-mobile" style="display:none;">
-    <a href="https://www.facebook.com/luketa2/" target="_blank"><img src="img/facebook.png" alt="Facebook" /></a>
-    <a href="https://www.instagram.com/luketa2" target="_blank"><img src="img/instagram.png" alt="Instagram" /></a>
-    <a href="https://wa.me/393482463458" target="_blank"><img src="img/whatsapp.png" alt="WhatsApp" /></a>
+  <div class="section-hero">
+    <div class="section-header">
+      <img src="img/luketa2-logo.png" alt="LukeTA2 Logo" class="logo" />
+      <span class="section-title">Tattoo Colorati</span>
+    </div>
   </div>
   <main>
     <section class="tattoo-section">
@@ -46,6 +66,12 @@
         <!-- Aggiungi altre immagini colorate qui -->
       </div>
     </section>
+    <div class="section-hero bw">
+      <div class="section-header">
+        <img src="img/luketa2-logo.png" alt="LukeTA2 Logo" class="logo" />
+        <span class="section-title">Tattoo Bianco e Nero</span>
+      </div>
+    </div>
     <section class="tattoo-section">
       <h1 class="tattoo-title">Tattoo Bianco e Nero</h1>
       <p class="tattoo-desc">Eleganza, contrasti e dettagli per tatuaggi senza tempo.</p>
